build_error.txt

> space-analyzer-pro@2.5.0 build
> vite build

[36mvite v8.0.10 [32mbuilding client environment for production...[36m[39m
[2K
transforming...в‰ЎЖ’ВЄГ– Detected 9 Ollama models: qwen3.5:4b, deepseek-coder:6.7b-instruct, qwen2.5-coder:7b-instruct, gemma4:e2b, phi4-mini:latest, qwen3-vl:4b, gemma3:4b, llamusic/LLAMUsic2:1b, llamusic/llamusic:latest
в‰ЎЖ’ВЄГ– Detected 9 Ollama models: qwen3.5:4b, deepseek-coder:6.7b-instruct, qwen2.5-coder:7b-instruct, gemma4:e2b, phi4-mini:latest, qwen3-vl:4b, gemma3:4b, llamusic/LLAMUsic2:1b, llamusic/llamusic:latest
в‰ЎЖ’Г»Г‘в€©в••Г…  Hardware Configuration
О“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶Гј
Tier: MID-RANGE
Power Profile: balanced
CPU: 12 cores (AMD Ryzen 5 5500                               )
Memory: 31 GB
GPU: NVIDIA GeForce GTX 1070 Ti
Device: Desktop (maximum performance)
Ollama Models: qwen3.5:4b, deepseek-coder:6.7b-instruct, qwen2.5-coder:7b-instruct, gemma4:e2b, phi4-mini:latest, qwen3-vl:4b, gemma3:4b, llamusic/LLAMUsic2:1b, llamusic/llamusic:latest
О“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶Гј
Workers: 10 (2048MB each)
Max Concurrent AI: 10
AI Model: phi4-mini:latest
Body Parser Limit: 500mb
О“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶ГјО“Г¶Гј
в‰ЎЖ’Г†Г­ To override: set SA_CPU_CORES=16 SA_MEMORY_GB=32 SA_HARDWARE_TIER=high-end
   Other vars: SA_IS_LAPTOP=false SA_AI_MODEL=phi4-mini:latest

О“ВЈГґ 1846 modules transformed.
О“ВЈГ№ Build failed in 10.27s
error during build:
Build failed with 1 error:

[plugin vite:vue] E:/Self Built Web and Mobile Apps/Space Analyzer/src/components/ai/AnalyticsDataVisualization.vue:100:0
SyntaxError: [vue/compiler-sfc] Unexpected token, expected "," (100:0)

E:/Self Built Web and Mobile Apps/Space Analyzer/src/components/ai/AnalyticsDataVisualization.vue
343|    }
344|  }
345|  
   |   ^
346|  const loadVisualizationData = async () => {
   |  ^
347|    // Load pattern data
    at constructor (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:365:19)
    at TypeScriptParserMixin.raise (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:6599:19)
    at TypeScriptParserMixin.unexpected (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:6619:16)
    at TypeScriptParserMixin.expect (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:6899:12)
    at TypeScriptParserMixin.parseCallExpressionArguments (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:11243:14)
    at TypeScriptParserMixin.parseCoverCallAndAsyncArrowHead (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:11186:29)
    at TypeScriptParserMixin.parseSubscript (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:11120:19)
    at TypeScriptParserMixin.parseSubscript (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:9272:18)
    at TypeScriptParserMixin.parseSubscripts (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:11094:19)
    at TypeScriptParserMixin.parseExprSubscripts (E:\Self Built Web and Mobile Apps\Space Analyzer\node_modules\@babel\parser\lib\index.js:11085:17)
    at aggregateBindingErrorsIntoJsError (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/rolldown/dist/shared/error-DL-e8-oE.mjs:48:18)
    at unwrapBindingResult (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/rolldown/dist/shared/error-DL-e8-oE.mjs:18:128)
    at #build (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/rolldown/dist/shared/rolldown-build-DSxL8qiP.mjs:3317:34)
    at async buildEnvironment (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/vite/dist/node/chunks/node.js:33018:64)
    at async Object.build (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/vite/dist/node/chunks/node.js:33440:19)
    at async Object.buildApp (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/vite/dist/node/chunks/node.js:33437:153)
    at async CAC.<anonymous> (file:///E:/Self%20Built%20Web%20and%20Mobile%20Apps/Space%20Analyzer/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
